--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,3 +24,9 @@ spring:
       format_sql: true
       #optional - generate statistics to check if L2/query cache is actually being used.
       generate_statistics: false
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
